# srex

./: .coverage  .env  .gitignore  DRIFT_PERSISTENCE_IMPLEMENTATION.md  Dockerfile  Makefile  README.md  config.json  config.yaml  e2e_test.sh  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-rag.txt  requirements.txt  setup.py  simulate_traffic.py  srex  test_5step_llm.py  test_components_flow.py  test_end_to_end_sli.py  test_frontend_integration.py  test_langchain_integration.py  test_llm_json.py  test_numeric_conversion.py  test_quantity_controls.py  test_validation.py
api/: main.py  routes.py
backend/: .coverage  __init__.py  create_drift_table.py  models_llm.py  requirements.txt  run.py  setup.py  test_llm_json.py
cli/: commands.py  drift.py  generate_metrics.py  main.py  policy.py  run_all_validations.py  save_sli_data.py  scheduler.py  scorecard.py  test_all_contexts.py  test_cli_invocations.py  test_selected_contexts.py  test_sli.py  validate_all_contexts.py  validate_context.py  validate_inputs.py  validate_outputs.py
commands/: commands.txt
core/: alerting_output_schema.py  automation_output_schema.py  availability_output_schema.py  basic_validator.py  config.py  input_schema.py  llm_confidence.py  logger.py  middleware.py  observability_output_schema.py  output_schema.py  prompt_engine.py  reliability_output_schema.py  schema.py
debug/: after_numeric_conversion.json  data_for_validation_drift_suggestions.json  data_for_validation_scorecard_suggestions.json  data_for_validation_step1_sli_discovery.json  final_json.json  (+20 more)
(+609 files in other folders)
